--- a/style.css
+++ b/style.css
@@ -80,4 +80,10 @@ body {
             }
         }
         
+        .ativo{
+            background-color: var(--botao-ativo);
+            border-bottom: 4px solid var(--verde);
+        }
+        
+        
 
