--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-<link rel="stylesheet" href="style.css">
-
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
-.root {
+:root {
     --cor-de-fundo: #1E1E1E;
     --verde: #6FFF57;
     --branco: #FFFFFF;
@@ -11,11 +9,12 @@
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
 
-.body {
+body {
     background-color: var(--cor-de-fundo);
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
 }
+
 
 .conteudo-principal {
     display: flex;
@@ -37,8 +36,9 @@
     color: var(--verde);
 }
 
+
 .botao {
-    font-family: "Crakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -46,42 +46,36 @@
     padding: 1em;
     font-size: 18px;
     align-items: center;
-    width: 100%; 
-    border-bottom: 4px solid var(--botao-ativo); 
-    border-left: 2px solid var(--botao-ativo); 
-    border-right: 2px solid var(--botao-ativo); 
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
     border-top: none;
 }
 
+.botao:first-child {
+    border-radius: 40px 40px 0 0;
+}
+
+.botoes {
+    display: block;
+}
+
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
+@media screen and (min-width: 768px) {
     .botoes {
-        display: block;
+        display: flex;
     }
-    
-    @media screen and (min-width: 768px) {
-        .botoes {
-            display: flex;
-        }
 
-        .botao:first-child {
-            border-radius: 40px 40px 0 0;
-        }
-        
-        @media screen and (min-width: 768px) {
-            .botoes {
-                display: flex;
-            }
-        
-            .botao:first-child {
-                border-radius: 40px 0 0 0;
-            }
-        
-            .botao:last-child {
-                border-radius: 0 40px 0 0;
-            }
-        }
+    .botao:first-child {
+        border-radius: 40px 0 0 0;
+    }
 
-        .ativo{
-            background-color: var(--botao-ativo);
-            border-bottom: 4px solid var(--verde);
-        }
-        
+    .botao:last-child {
+        border-radius: 0 40px 0 0;
+    }
+}
